# ners570f23-LTFP

./: .gitignore  CMakeLists.txt  README.md
cmake/: add_simulator.cmake  add_test.cmake  gnu_warning_flags.cmake
doc/: doxygen_config
scenes/: 1D_diffusion_test.json  Conservation_test.json  demonstration.json  ners570_demo.json  ners570_demo_timing.json  readme.md  test.json
scenes/path/: generate_path.py  ners570_demo_layer.json  ners570_demo_path.json  test_layer.json  test_path.json
simulator/: CMakeLists.txt  default_simulator.cpp  main.cpp
src/: CMakeLists.txt  Common.cpp  Common.hpp  LaserSource.cpp  LaserSource.hpp  MaterialProperty.cpp  MaterialProperty.hpp  MeshData.cpp  MeshData.hpp  SceneLoader.cpp  SceneLoader.hpp  Simulator.cpp  Simulator.hpp  ThermalBoundary.cpp  ThermalBoundary.hpp  TimeManager.cpp  TimeManager.hpp  exampleSingleton.cpp  exampleSingleton.hpp
src/Exporter/: ExportManager.cpp  ExportManager.hpp  Exporter.cpp  Exporter.hpp  ExporterCsvMesh.cpp  ExporterCsvMesh.hpp  ExporterVtkMesh.cpp  ExporterVtkMesh.hpp  TimeManager.cpp  TimeManager.hpp
src/Solver/: Solver.cpp  Solver.hpp  SolverForwardEuler.cpp  SolverForwardEuler.hpp
src/ThermalBoundary/: Boundary.hpp  BoundaryManager.cpp  BoundaryManager.hpp  ThermalBoundary.cpp  ThermalBoundary.hpp  ThermalBoundaryConvection.cpp  ThermalBoundaryConvection.hpp  ThermalBoundaryDirichlet.cpp  ThermalBoundaryDirichlet.hpp  ThermalBoundaryMirror.cpp  ThermalBoundaryMirror.hpp  ThermalBoundaryNeumann.cpp  ThermalBoundaryNeumann.hpp  ThermalBoundaryRadiation.cpp  ThermalBoundaryRadiation.hpp
src/ThermalSolver/: ThermalSolver.cpp  ThermalSolver.hpp  ThermalSolverFTCS.cpp  ThermalSolverFTCS.hpp
tests/: CMakeLists.txt  compare.hpp  example.cpp  loadScene.cpp  test_boundary.cpp  test_common.cpp  test_exporter.cpp  test_filesystem.cpp  test_laser.cpp  test_loadScene.cpp  test_matProp.cpp  test_mesh.cpp  test_sceneLoader.cpp  test_solverFE.cpp  test_timeManager.cpp  test_utility.cpp  utility.cpp
utilities/: CMakeLists.txt  Common.h  Counting.h  Counting.hpp  Logger.h  Logger.hpp  StringTools.h  Timing.h  Timing.hpp  json.hpp  readme.md
